# basecampapi

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
basecampapi/: __init__.py  basecamp.py
basecampapi/endpoints/: attachments.py  camprife.py  messageboard.py
src/: basecamp.py
tests/: initial_auth.ipynb  main.ipynb  marko011rs.ipynb
tests/old_files/: basecamp.py  test.ipynb
