[tool.poetry]
name = "basecampapi"
version = "1.2.1"
description = ""
authors = ["mare011rs <mare011rs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
filetype = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
