[metadata]
name = basecampapi
version = 0.0.1
author = Marko Stefanovic
author_email = mare011rs@gmail.com
description = For interacting with Basecamp API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mare011rs/basecampapi
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent